# Fil-Rouge-UTT

./: .gitignore  MANIFEST.in  README.md  deals_with_comments.json  docker-compose.yml  entry_point.py  pyproject.toml  setup.py  vectorisation et stockage des deals.py
dealabs/: __init__.py  models.py
martial_app/: Dockerfile  README.md  app.py  rag_logic.py  requirements.txt
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/: entry_point.py
src/dealabs/: cli.py  constants.py  dealabs.py
src/indexing/: deals_vector_indexing.py
